--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@ npx react-native@${VERSION} init ProjectName --template ${TEMPLATE_NAME}
     <p>Contributions are very welcome. Please check out the <a href="CONTRIBUTING.md">contributing document</a>.</p>
     <h2 id="license"><a class="anchor" aria-hidden="true" tabindex="-1" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
     <p>This project is <a href="LICENSE">MIT</a> licensed.</p>
+    <h1 id="announcing-069"><a class="anchor" aria-hidden="true" tabindex="-1" href="#announcing-069"><span class="octicon octicon-link"></span></a>Announcing 0.69</h1>
+    <ul>
+      <li><a href="https://github.com/facebook/react-native-website/blob/main/website/blog/2022-06-21-version-069.md">React Native 0.69</a></li>
+    </ul>
   <style>.markdown-body pre .copied {
   display: flex;
   position: absolute;
