--- a/index.html
+++ b/index.html
@@ -280,14 +280,34 @@ npx react-native@${VERSION} init ProjectName --template ${TEMPLATE_NAME}
     <ul>
       <li><a href="https://react-native-community.github.io/upgrade-helper/">React Native upgrade helper</a></li>
     </ul>
-    <h2 id="contributing"><a class="anchor" aria-hidden="true" tabindex="-1" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h2>
-    <p>Contributions are very welcome. Please check out the <a href="CONTRIBUTING.md">contributing document</a>.</p>
+    <h2 id="contributors"><a class="anchor" aria-hidden="true" tabindex="-1" href="#contributors"><span class="octicon octicon-link"></span></a>Contributors</h2>
+    <p>As always, thanks to our amazing contributors!</p><!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT--><a href="https://github.com/jaywcjlove" title="小弟调调™">
+      <img src="https://avatars.githubusercontent.com/u/1680273?v=4" width="42;" alt="小弟调调™">
+</a>
+<a href="https://github.com/renovate-bot" title="Mend Renovate">
+  <img src="https://avatars.githubusercontent.com/u/25180681?v=4" width="42;" alt="Mend Renovate">
+</a>
+<a href="https://github.com/ChenlingasMx" title="Chenling">
+  <img src="https://avatars.githubusercontent.com/u/59959718?v=4" width="42;" alt="Chenling">
+</a>
+<a href="https://github.com/cuilanxin" title="崔兰鑫">
+  <img src="https://avatars.githubusercontent.com/u/57083007?v=4" width="42;" alt="崔兰鑫">
+</a>
+<a href="https://github.com/matuancc" title="cc">
+  <img src="https://avatars.githubusercontent.com/u/33281802?v=4" width="42;" alt="cc">
+</a>
+<a href="https://github.com/Amber-Nan" title="Amber-Nan">
+  <img src="https://avatars.githubusercontent.com/u/66067296?v=4" width="42;" alt="Amber-Nan">
+</a>
+<a href="https://github.com/wwmmzz" title="day2">
+  <img src="https://avatars.githubusercontent.com/u/26562795?v=4" width="42;" alt="day2">
+</a>
+<a href="https://github.com/xingyuefeng" title="xyf">
+  <img src="https://avatars.githubusercontent.com/u/24369183?v=4" width="42;" alt="xyf">
+</a><!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-END-->
+    <p>Made with <a href="https://github.com/jaywcjlove/github-action-contributors">contributors</a>.</p>
     <h2 id="license"><a class="anchor" aria-hidden="true" tabindex="-1" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
     <p>This project is <a href="LICENSE">MIT</a> licensed.</p>
-    <h1 id="announcing-069"><a class="anchor" aria-hidden="true" tabindex="-1" href="#announcing-069"><span class="octicon octicon-link"></span></a>Announcing 0.69</h1>
-    <ul>
-      <li><a href="https://github.com/facebook/react-native-website/blob/main/website/blog/2022-06-21-version-069.md">React Native 0.69</a></li>
-    </ul>
   <style>markdown-style pre .copied {
   display: flex;
   position: absolute;
