deploy: 66a52cdfa213796625b6f431fd817bd85c077bd8

--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@ npx react-native@${VERSION} init ProjectName --template ${TEMPLATE_NAME}
 </a>
 <a href="https://github.com/xingyuefeng" title="xyf">
   <img src="https://avatars.githubusercontent.com/u/24369183?v=4" width="42;" alt="xyf">
+</a>
+<a href="https://github.com/SunLxy" title="逍遥">
+  <img src="https://avatars.githubusercontent.com/u/49544090?v=4" width="42;" alt="逍遥">
 </a><!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-END-->
     <p>Made with <a href="https://github.com/jaywcjlove/github-action-contributors">contributors</a>.</p>
     <h2 id="license"><a class="anchor" aria-hidden="true" tabindex="-1" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
