deploy: ed4ec0dff74c8cbf540b2e0889f12b08f2562ff3

--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@ git add .husky/pre-commit
       <li><a href="https://react-native-community.github.io/upgrade-helper/">React Native upgrade helper</a></li>
     </ul>
     <h2 id="contributors"><a class="anchor" aria-hidden="true" tabindex="-1" href="#contributors"><span class="octicon octicon-link"></span></a>Contributors</h2>
-    <p>As always, thanks to our amazing contributors!</p><!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT--><a href="https://github.com/jaywcjlove" title="小弟调调™">
-      <img src="https://avatars.githubusercontent.com/u/1680273?v=4" width="42;" alt="小弟调调™">
+    <p>As always, thanks to our amazing contributors!</p><!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT--><a href="https://github.com/jaywcjlove" title="小弟调调">
+      <img src="https://avatars.githubusercontent.com/u/1680273?v=4" width="42;" alt="小弟调调">
 </a>
 <a href="https://github.com/renovate-bot" title="Mend Renovate">
   <img src="https://avatars.githubusercontent.com/u/25180681?v=4" width="42;" alt="Mend Renovate">
@@ -330,6 +330,9 @@ git add .husky/pre-commit
 </a>
 <a href="https://github.com/SunLxy" title="逍遥">
   <img src="https://avatars.githubusercontent.com/u/49544090?v=4" width="42;" alt="逍遥">
+</a>
+<a href="https://github.com/panbibi" title="panbibi">
+  <img src="https://avatars.githubusercontent.com/u/81728478?v=4" width="42;" alt="panbibi">
 </a><!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-END-->
     <p>Made with <a href="https://github.com/jaywcjlove/github-action-contributors">contributors</a>.</p>
     <h2 id="license"><a class="anchor" aria-hidden="true" tabindex="-1" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
