--- a/index.html
+++ b/index.html
@@ -299,6 +299,98 @@ git add .husky/pre-commit
   ├──react-native-safe-area-context
   └──@react-native-community/masked-view
 " class="copied"><svg class="octicon-copy" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor" height="12" width="12"><path fill-rule="evenodd" d="M0 6.75C0 5.784.784 5 1.75 5h1.5a.75.75 0 010 1.5h-1.5a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-1.5a.75.75 0 011.5 0v1.5A1.75 1.75 0 019.25 16h-7.5A1.75 1.75 0 010 14.25v-7.5z"></path><path fill-rule="evenodd" d="M5 1.75C5 .784 5.784 0 6.75 0h7.5C15.216 0 16 .784 16 1.75v7.5A1.75 1.75 0 0114.25 11h-7.5A1.75 1.75 0 015 9.25v-7.5zm1.75-.25a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-7.5a.25.25 0 00-.25-.25h-7.5z"></path></svg><svg class="octicon-check" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor" height="12" width="12"><path fill-rule="evenodd" d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"></path></svg></div></pre>
+    <h2 id="目录结构"><a class="anchor" aria-hidden="true" tabindex="-1" href="#目录结构"><span class="octicon octicon-link"></span></a>目录结构</h2>
+    <pre><code class="code-highlight"><span class="code-line line-number" line="1">├── Gemfile
+</span><span class="code-line line-number" line="2">├── README.md
+</span><span class="code-line line-number" line="3">├── __tests__
+</span><span class="code-line line-number" line="4">│   └── App-test.js
+</span><span class="code-line line-number" line="5">├── _bundle
+</span><span class="code-line line-number" line="6">│   └── config
+</span><span class="code-line line-number" line="7">├── _node-version
+</span><span class="code-line line-number" line="8">├── android
+</span><span class="code-line line-number" line="9">│   ├── app
+</span><span class="code-line line-number" line="10">│   ├── build.gradle
+</span><span class="code-line line-number" line="11">│   ├── gradle
+</span><span class="code-line line-number" line="12">│   ├── gradle.properties
+</span><span class="code-line line-number" line="13">│   ├── gradlew
+</span><span class="code-line line-number" line="14">│   ├── gradlew.bat
+</span><span class="code-line line-number" line="15">│   └── settings.gradle
+</span><span class="code-line line-number" line="16">├── app.json
+</span><span class="code-line line-number" line="17">├── babel.config.js
+</span><span class="code-line line-number" line="18">├── index.js
+</span><span class="code-line line-number" line="19">├── ios
+</span><span class="code-line line-number" line="20">│   ├── HelloWorld
+</span><span class="code-line line-number" line="21">│   ├── HelloWorld.xcodeproj
+</span><span class="code-line line-number" line="22">│   ├── HelloWorld.xcworkspace
+</span><span class="code-line line-number" line="23">│   ├── HelloWorldTests
+</span><span class="code-line line-number" line="24">│   ├── Podfile
+</span><span class="code-line line-number" line="25">│   ├── Podfile.lock
+</span><span class="code-line line-number" line="26">│   ├── Pods
+</span><span class="code-line line-number" line="27">│   ├── _xcode.env
+</span><span class="code-line line-number" line="28">│   └── build
+</span><span class="code-line line-number" line="29">├── jsconfig.json
+</span><span class="code-line line-number" line="30">├── metro.config.js
+</span><span class="code-line line-number" line="31">├── mocker
+</span><span class="code-line line-number" line="32">│   ├── index.js
+</span><span class="code-line line-number" line="33">│   └── user.mock.js
+</span><span class="code-line line-number" line="34">├── package.json
+</span><span class="code-line line-number" line="35">└── src
+</span><span class="code-line line-number" line="36">    ├── App.js
+</span><span class="code-line line-number" line="37">    ├── components
+</span><span class="code-line line-number" line="38">    ├── config.js
+</span><span class="code-line line-number" line="39">    ├── global.js
+</span><span class="code-line line-number" line="40">    ├── hooks
+</span><span class="code-line line-number" line="41">    ├── models
+</span><span class="code-line line-number" line="42">    ├── pages
+</span><span class="code-line line-number" line="43">    ├── routes
+</span><span class="code-line line-number" line="44">    ├── services
+</span><span class="code-line line-number" line="45">    └── utils
+</span></code><div onclick="copied(this)" data-code="├── Gemfile
+├── README.md
+├── __tests__
+│   └── App-test.js
+├── _bundle
+│   └── config
+├── _node-version
+├── android
+│   ├── app
+│   ├── build.gradle
+│   ├── gradle
+│   ├── gradle.properties
+│   ├── gradlew
+│   ├── gradlew.bat
+│   └── settings.gradle
+├── app.json
+├── babel.config.js
+├── index.js
+├── ios
+│   ├── HelloWorld
+│   ├── HelloWorld.xcodeproj
+│   ├── HelloWorld.xcworkspace
+│   ├── HelloWorldTests
+│   ├── Podfile
+│   ├── Podfile.lock
+│   ├── Pods
+│   ├── _xcode.env
+│   └── build
+├── jsconfig.json
+├── metro.config.js
+├── mocker
+│   ├── index.js
+│   └── user.mock.js
+├── package.json
+└── src
+    ├── App.js
+    ├── components
+    ├── config.js
+    ├── global.js
+    ├── hooks
+    ├── models
+    ├── pages
+    ├── routes
+    ├── services
+    └── utils
+" class="copied"><svg class="octicon-copy" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor" height="12" width="12"><path fill-rule="evenodd" d="M0 6.75C0 5.784.784 5 1.75 5h1.5a.75.75 0 010 1.5h-1.5a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-1.5a.75.75 0 011.5 0v1.5A1.75 1.75 0 019.25 16h-7.5A1.75 1.75 0 010 14.25v-7.5z"></path><path fill-rule="evenodd" d="M5 1.75C5 .784 5.784 0 6.75 0h7.5C15.216 0 16 .784 16 1.75v7.5A1.75 1.75 0 0114.25 11h-7.5A1.75 1.75 0 015 9.25v-7.5zm1.75-.25a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-7.5a.25.25 0 00-.25-.25h-7.5z"></path></svg><svg class="octicon-check" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor" height="12" width="12"><path fill-rule="evenodd" d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"></path></svg></div></pre>
     <h2 id="links"><a class="anchor" aria-hidden="true" tabindex="-1" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
     <ul>
       <li><a href="https://react-native-community.github.io/upgrade-helper/">React Native upgrade helper</a></li>
